--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -256,6 +256,7 @@
       </div>
     </div>
   </div>
+  <button id="logoutbutton">Logout</button>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="dashboard.js"></script>
